modify ContractService.java